# CS236-Projects

./: README.md
Project 1/: Automaton.h  CMakeLists.txt  CommentAutomation.cpp  CommentAutomation.h  IDAutomaton.h  Lexer.cpp  Lexer.h  QueriesAutomaton.cpp  RulesAutomaton.cpp  RulesAutomaton.h  StringAutomaton.cpp  Token.cpp  Token.h  UndefinedAutomata.cpp  lab1  main.cpp
Project 1/lab1.dSYM/Contents/Resources/DWARF/: lab1
Project 2/: AddAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommentAutomation.cpp  EOFAutomaton.h  LeftParenAutomaton.h  Lexer.cpp  Parser.cpp  Predicate.cpp  QMarkAutomaton.cpp  Rule.cpp  Rule.h  SchemesAutomaton.h  StringAutomaton.h  lab2
Project 2/lab2.dSYM/Contents/Resources/DWARF/: lab2
Project 3/: CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  Lexer.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  Predicate.h  Relation.cpp  Relation.h  RightParenAutomaton.h  SchemesAutomaton.cpp  Token.h  Tuple.cpp  Tuple.h  lab3  main.cpp
Project 3/lab3.dSYM/Contents/Resources/DWARF/: lab3
Project 4/: AddAutomaton.cpp  CMakeLists.txt  Database.h  FactAutomaton.cpp  Header.cpp  Header.h  IDAutomaton.cpp  Interpreter.cpp  Interpreter.h  Lexer.h  Parameter.h  PeriodAutomaton.h  Predicate.cpp  QMarkAutomaton.h  QueriesAutomaton.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Tuple.cpp  UndefinedAutomata.h  lab4
Project 4/lab4.dSYM/Contents/Resources/DWARF/: lab4
Project 5/: CMakeLists.txt  CommaAutomaton.h  Database.cpp  DatalogProgram.cpp  EOFAutomaton.cpp  FactAutomaton.h  Graph.cpp  Graph.h  Header.h  Interpreter.cpp  Interpreter.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Predicate.h  RightParenAutomaton.cpp  Rule.cpp  Rule.h  Token.cpp  Token.h  UndefinedAutomata.cpp  lab5  main.cpp
Project 5/lab5.dSYM/Contents/Resources/DWARF/: lab5
